--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-	background-image: url("https://goo.gl/UjBij2");
+	background-image: url("https://goo.gl/aRFksX");
     background-size: cover;
 }
 
