--- a/cev/main.css
+++ b/cev/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-	background-image: url("https://goo.gl/aRFksX");
+	background-image: url("https://Diogo1809.github.io/cev/imagens/Hardware_cev.png");
     background-size: cover;
 }
 
